# $Id$

CoLo 1.12 (xxxx-xx-xx)
----------------------

*	Fixed a couple of off by one errors in the 'boot' command.

*	Added 'console disable' to the non-volatile flags. This defers initialising
	the serial port until the boot shell is entered and should make it possible
	to use CoLo on units which don't have a serial port. This flag will be set
	by default on new installs, but will be clear on units which have a recent
	CoLo install already.

*	Added man pages for 'paneld' and 'e2fsck-lcd'.
	[Martin Michlmayr]

CoLo 1.11 (2004-07-28)
----------------------

*	Build all the tools.

*	You can now break out of the boot menu via the console.

*	Added man pages for 'colo-perm' and 'md5rom'.
	[Martin Michlmayr]

*	Added 'e2fsck-lcd', file check progress bar on LCD.

*	Fixed LCD second row offset (all over).

*	Make shell refuse to load chain loader.

*	Added simple front panel daemon 'paneld'.

*	Added 'restrict' command to shell.

CoLo 1.10 (2004-05-23)
----------------------

*	Fixed loading of files with sparse blocks.

*	Added signature to Flash, and 'colo-perm' to test for it.

*	Changed PCI latency registers to 64 (matches kernel default).

*	Added NFS support ('nfs' command).

*	Removed debugging output from chain loader. Chain loader now uses LCD for
 	error messages.

*	Added command 'serial' for changing serial baud rate. Baud rate setting is
	non-volatile.

CoLo 1.9 (2004-05-02)
---------------------

*	CTRL-C now acts as a break key (in addition to SPACE).

*	Comments are now only supported in scripts.

*	The 'script' command has been changed to execute a script already loaded
 	into memory via the 'load', 'tftp' or 'download' commands.

	** NOTE **

		Scripts must now begin with the line '#:CoLo:#'.

*	Automatic insertion of the kernel 'initrd=' command line argument has been
 	removed. All initrd parameters are now available in variables.

*	Made use of non-volatile storage on RTC.

*	Renamed 'dflags' command to 'nvflags' and made the flags non-volatile.
